spotless:apply 적용